--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -10,7 +10,9 @@
   <strong>Journalist</strong>
 <ul>
     <li>llibertylee@gmail.com</li>
-    <li>LinkedIn: <a href="linkedin.com/in/liberty-lee-172b98190">
+    <li>https://libjlee.wordpress.com/</li>
+    <li>LinkedIn: linkedin.com/in/liberty-lee-172b98190</li>
+    <li>Instagram:</li>
     </a>
 </ul>
 
