--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -9,9 +9,10 @@
   <h1>Liberty Lee</h1>
   <strong>Journalist</strong>
 <ul>
-    <li>llibertylee@gmail.com</li>
+    <li><a href="mailto:llibertylee@gmail.com"></a></li>
     <li>https://libjlee.wordpress.com/</li>
-    <li>LinkedIn: linkedin.com/in/liberty-lee-172b98190</li>
+    <li><a href="linkedin.com/in/liberty-lee-172b98190">LinkedIn</a> </li>
+    <li></li>
     <li>Instagram:</li>
     </a>
 </ul>
