--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -9,13 +9,20 @@
   <h1>Liberty Lee</h1>
   <strong>Journalist</strong>
 <ul>
-    <li><a href="mailto:llibertylee@gmail.com">llibertylee@gmail.com</a></li>
-    <li>https://libjlee.wordpress.com/</li>
+    <li><a href="mailto:llibertylee@gmail.com">Email me</a></li>
+    <li>a href="https://libjlee.wordpress.com/">Visit my website</li>
     <li><a href="linkedin.com/in/liberty-lee-172b98190">LinkedIn</a> </li>
-    <li></li>
-    <li>Instagram:</li>
-    </a>
+    <li><a href="https://github.com/libjlee/liberty-lee-jour352" GitHub></a></li>
 </ul>
+
+<p>Description</p>
+
+<h2>Experience</h2>
+
+
+<h2>Education</h2>
+
+<h2>Skills</h2>
 
 </body>
 
