--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -10,9 +10,9 @@
   <strong>Journalist</strong>
 <ul>
     <li><a href="mailto:llibertylee@gmail.com">Email me</a></li>
-    <li>a href="https://libjlee.wordpress.com/">Visit my website</li>
+    <li><a href="https://libjlee.wordpress.com/">Visit my website</li>
     <li><a href="linkedin.com/in/liberty-lee-172b98190">LinkedIn</a> </li>
-    <li><a href="https://github.com/libjlee/liberty-lee-jour352" GitHub></a></li>
+    <li><a href="https://github.com/libjlee/liberty-lee-jour352">GitHub></a></li>
 </ul>
 
 <p>Description</p>
