--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -18,9 +18,14 @@
 <p>Description</p>
 
 <h2>Experience</h2>
+<h3>Lead Instructor</h3>
+<h4>DEAN Adventure Camps</h4>
+<h5>Jun 2022 - Aug 2024</h5>
+<p>Job description</p>
 
 
 <h2>Education</h2>
+
 
 <h2>Skills</h2>
 
