--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -5,9 +5,13 @@
   <title>Liberty Lee Resume</title>
 </head>
 
-<body>
+
+
   <h1>Liberty Lee</h1>
-  <strong>Journalist</strong>
+  <strong>Journalist</strong><br>
+
+<img src="IMG_3770.jpg" alt="Liberty Lee Headshot" width="300px">
+
 <ul>
     <li><a href="mailto:llibertylee@gmail.com">Email me</a></li>
     <li><a href="https://libjlee.wordpress.com/">Visit my website</li>
@@ -25,9 +29,14 @@
 
 
 <h2>Education</h2>
-
+  <ul>
+    <li>Bachelor of Arts in Journalism, Minor in Linguistics, Ithaca College, 2025</li>
+  </ul>
 
 <h2>Skills</h2>
+<ul>
+    <li>Podcasting</li>
+  </ul>
 
 </body>
 
