--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -10,7 +10,7 @@
   <h1>Liberty Lee</h1>
   <strong>Journalist</strong><br>
 
-<img src="IMG_3770.jpg" alt="Liberty Lee Headshot" width="300px">
+<img src="IMG_3770.jpeg" alt="Liberty Lee Headshot" width="300px">
 
 <ul>
     <li><a href="mailto:llibertylee@gmail.com">Email me</a></li>
