Creation of style.css file

--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -3,8 +3,11 @@
 
 <head>
   <title>Liberty Lee Resume</title>
+  <link rel="stylesheet" type="type/css" href="style.css">
 </head>
 
+<body>
+<!-- I built this myself-->
 
 
   <h1>Liberty Lee</h1>
@@ -27,6 +30,10 @@
 <h5>Jun 2022 - Aug 2024</h5>
 <p>Job description</p>
 
+<h3>Opinion Editor</h3>
+<h4>The Ithacan</h4>
+<h5>Oct 2022 - Aug 2024</h5>
+<p>Job description</p>
 
 <h2>Education</h2>
   <ul>
@@ -35,7 +42,9 @@
 
 <h2>Skills</h2>
 <ul>
-    <li>Podcasting</li>
+    <li>Podcasting. </li>
+    <li>Social Media Management.</li>
+    <li>Writing and Editing.</li>
   </ul>
 
 </body>
