--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Liberty Lee Resume</title>
-  <link rel="stylesheet" type="type/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
