--- a/LeeLayouts/index.html
+++ b/LeeLayouts/index.html
@@ -5,11 +5,11 @@
     <title>Document</title>
 </head>
 <body> 
+    <div id="content">
     Jerusalem Tattoo Artist Inks Pilgrims, Priests and Those Scarred by Conflict
 Isabel Kershner
 
 For Wassim Razzouk, Holy Week is his busiest time as Christians seek a reminder of their visit to Jerusalem. But his family’s centuries-old tattoo business caters to all faiths.
-
 
 JERUSALEM — A Jewish man who may have been drunk once asked him to tattoo “kosher” in Hebrew on his butt. His oldest customer was a woman of 101. Members of the U.S. Secret Service often stop by to sample his handiwork when they’re in town.
 
@@ -29,13 +29,13 @@ The Old City, in predominantly Palestinian East Jerusalem, has long been a cruci
 
 Mr. Razzouk’s tiny store is something of a haven amid all the hostility, a symbol of religious and political tolerance.
 
-“I have tattooed Christians, Palestinians, Ethiopians, Israelis — believe it or not, I’ve tattooed an Orthodox Jew with sidelocks,” said Mr. Razzouk, who identifies as a member of the Palestinian Christian minority. “I’ve tattooed nuns, atheists and bishops.”
+“I have tattooed Christians, Palestinians, Ethiopians, Israelis — believe it or not, I've tattooed an Orthodox Jew with sidelocks,” said Mr. Razzouk, who identifies as a member of the Palestinian Christian minority. “I’ve tattooed nuns, atheists and bishops.”
 
 As dusk fell on a recent evening, the ink machine at his shop was still buzzing as more customers gathered in the cobbled alley outside, waiting their turn.
 
 While tattoos may have moved into the global mainstream only in the last few decades, the Razzouk family has been practicing the art form a little bit longer: 700 years, or 27 generations, he said. He’s the scion of a long-venerated family of tattoo artists, Coptic Christians who, as family lore has it, came on a pilgrimage from Egypt to the Holy Land hundreds of years ago, and decided to stay in Jerusalem and set up shop.
 
-Mr. Razzouk — with his long hair, Harley-Davidson biker’s jacket and passion for motorcycles — decided to follow in the family tradition at the age of 33. His two sisters and the cousins of his generation were not interested in becoming tattoo artists, he said, adding, “I knew that if it wasn’t for me the tradition would disappear.”
+Mr. Razzouk — with his long hair, Harley-Davidson biker's jacket and passion for motorcycles — decided to follow in the family tradition at the age of 33. His two sisters and the cousins of his generation were not interested in becoming tattoo artists, he said, adding, “I knew that if it wasn’t for me the tradition would disappear.”
 
 His father, Anton, 82, taught him the craft, having learned it from his father, Jacob, or Yaqoub.
 
@@ -82,5 +82,6 @@ As for the man who wanted a “kosher” brand on his behind, Mr. Razzouk said h
 Mr. Razzouk has found his own way of transcending the conflict, without ignoring its complexities. His chief identity today, he said, is as the founder of the Holy Land Bikers Motorcycle Club. Its members include Christians and Muslims, he said, and they ride in coalition with all types of Israeli motorcycle groups and have connections throughout the Arab world.
 
 And he has trained the 28th generation of Razzouk tattooers: His sons — Anton, 21, and Nizar, 19 — work in the shop.
+</div>
 </body>
     </html>
