--- a/bootstrap-template.html
+++ b/bootstrap-template.html
@@ -16,6 +16,63 @@
 
     </head>
 
-<body></body>
+<body>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Site name</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <!-- Link 1-->
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link 1</a>
+        </li>
+        <!-- Link 2-->
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link 2</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </a>
+        <!-- Dropdown Menu -->
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+    <!-- Navigation Bar End -->
+
+     <!-- Hero start-->
+ <div class="px-4 py-5 my-5 text-center">
+   <img class="d-block mx-auto mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+   <h1 class="display-5 fw-bold text-body-emphasis">Centered hero</h1>
+   <div class="col-lg-6 mx-auto">
+     <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world's most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+       <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
+       <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
+     </div>
+   </div>
+ </div>
+    <!-- Hero end-->
+
+
+    Hello World!
+    
+
+</body>
 
 </html>
