--- a/Skate!-newsletter.html
+++ b/Skate!-newsletter.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
         
-        <title>Bootstrap Template</title>
+        <title>Skate! Newsletter</title>
         <meta name="description" content="Merrill College of Journalism, UMD">
         <meta name="author" content="Liberty Lee">
 
@@ -18,36 +18,27 @@
 
 <body>
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark" >
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Site name</a>
+    <a class="navbar-brand" href="#">Skate! Newsletter</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <!-- Current issue -->
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link" href="#">Current Issue</a>
         </li>
-        <!-- Link 1-->
+        <!-- Past issues -->
         <li class="nav-item">
-          <a class="nav-link" href="#">Link 1</a>
+          <a class="nav-link" href="#">Past Issues</a>
         </li>
-        <!-- Link 2-->
+        <!-- Follow us -->
         <li class="nav-item">
-          <a class="nav-link" href="#">Link 2</a>
+          <a class="nav-link" href="#">Folow us</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
           </a>
-        <!-- Dropdown Menu -->
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
         </li>
       </ul>
     </div>
@@ -56,21 +47,44 @@
     <!-- Navigation Bar End -->
 
      <!-- Hero start-->
- <div class="px-4 py-5 my-5 text-center">
-   <img class="d-block mx-auto mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-   <h1 class="display-5 fw-bold text-body-emphasis">Centered hero</h1>
-   <div class="col-lg-6 mx-auto">
-     <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world's most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
-     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-       <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
-       <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
-     </div>
-   </div>
- </div>
+ <div class="container col-xxl-8 px-4 py-5"> 
+  <div class="row flex-lg-row-reverse align-items-center g-5 py-5"> 
+    <div class="col-10 col-sm-8 col-lg-6"> 
+      <img src="https://images.unsplash.com/photo-1564982752979-3f7bc974d29a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy"> 
+    </div> 
+    <div class="col-lg-6"> 
+      <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">A rundown of top new skateboard deck </h1> 
+      <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p> 
+      <div class="d-grid gap-2 d-md-flex justify-content-md-start"> 
+        <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Read now</button> 
+      </div> 
+    </div> 
+  </div> 
+</div> <div class="b-example-divider"></div>
     <!-- Hero end-->
 
+    <!-- Grid -->
+<div class="container">
+  <div class="container text-center">
+  <div class="row">
+    <div class="col">
+      <h2>The myth of Jared Putowski</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <img src="https://images.unsplash.com/photo-1572776685600-aca8c3456337?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1502&q=80" alt="Jared Putowski" width="100%" max-width="500px">
+        <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Read now</button> 
+    </div>
+    <div class="col">
+      <h2>You should ditch your local skatepark</h2>
+       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+       <img src="https://images.unsplash.com/photo-1621544402532-78c290378588?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" alt="Skatepark" width="100%" max-width="500px">
+       <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Read now</button> 
+    </div>
+  </div>
+</div>
+</div>
+    <!-- Grid end -->
 
-    Hello World!
     
 
 </body>
