--- a/Skate! Newsletter/Skate!-newsletter.html
+++ b/Skate! Newsletter/Skate!-newsletter.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
         
         <title>Skate! Newsletter</title>
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
         <meta name="description" content="Merrill College of Journalism, UMD">
         <meta name="author" content="Liberty Lee">
 
@@ -13,6 +14,10 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
 
     </head>
 
@@ -36,9 +41,7 @@
         </li>
         <!-- Follow us -->
         <li class="nav-item">
-          <a class="nav-link" href="#">Folow us</a>
-        </li>
-          </a>
+         <a class="nav-link" href="#">Follow us</a>
         </li>
       </ul>
     </div>
@@ -71,13 +74,13 @@
     <div class="col">
       <h2>The myth of Jared Putowski</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <img src="https://images.unsplash.com/photo-1572776685600-aca8c3456337?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1502&q=80" alt="Jared Putowski" width="100%" max-width="500px">
+        <img src="https://images.unsplash.com/photo-1572776685600-aca8c3456337?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1502&q=80" alt="Jared Putowski" class="img-limited">
         <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Read now</button> 
     </div>
     <div class="col">
       <h2>You should ditch your local skatepark</h2>
        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-       <img src="https://images.unsplash.com/photo-1621544402532-78c290378588?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" alt="Skatepark" width="100%" max-width="500px">
+       <img src="https://images.unsplash.com/photo-1621544402532-78c290378588?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" alt="Skatepark" class="img-limited">
        <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Read now</button> 
     </div>
   </div>
@@ -85,23 +88,31 @@
   <div class="row">
     <div class="col">
       <i class="bi bi-envelope"></i>
-      Join the newsletter
+     <h3>Join the Newsletter</h3>
+      <p>Sign up to receive our weekly wrap-up</p>
     </div>
     <div class="col">
       <i class="bi bi-heart"></i>
-      Follow us
+      <h3>Follow us</h3>
+      <p>Find us on Instagram</p>
     </div>
     <div class="col">
       <i class="bi bi-handbag"></i>
-      Check out our merch
+      <h3>Skate! Store</h3>
+      <p>Check out our merch</p>
     </div>
   </div>
 </div>
-
 </div>
 </div>
     <!-- Grid end -->
-
+    <!-- Footer -->
+   <footer class="footer mt-auto py-3 bg-dark">
+      <div class="container">
+        <span class="text-muted">This is a bootstrap exercise</span>
+      </div>
+    </footer>
+    <!-- Footer end -->
     
 
 </body>
