--- a/Skate! Newsletter/Skate!-newsletter.html
+++ b/Skate! Newsletter/Skate!-newsletter.html
@@ -6,7 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
         
         <title>Skate! Newsletter</title>
-        <link rel="stylesheet" type="text/css" href="stylesheet.css">
         <meta name="description" content="Merrill College of Journalism, UMD">
         <meta name="author" content="Liberty Lee">
 
@@ -18,7 +17,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
-
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
 
 <body>
@@ -78,10 +77,10 @@
         <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Read now</button> 
     </div>
     <div class="col">
-      <h2>You should ditch your local skatepark</h2>
+      <h2>Ditch your local skatepark</h2>
        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
        <img src="https://images.unsplash.com/photo-1621544402532-78c290378588?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" alt="Skatepark" class="img-limited">
-       <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Read now</button> 
+        <div><button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Read now</button></div> 
     </div>
   </div>
   <div class="container text-center">
