--- a/Skate! Newsletter/Skate!-newsletter.html
+++ b/Skate! Newsletter/Skate!-newsletter.html
@@ -80,7 +80,7 @@
       <h2>Ditch your local skatepark</h2>
        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
        <img src="https://images.unsplash.com/photo-1621544402532-78c290378588?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" alt="Skatepark" class="img-limited">
-        <div><button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Read now</button></div> 
+       <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Read now</button> 
     </div>
   </div>
   <div class="container text-center">
