--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -15,6 +15,10 @@
     </head>
 
     <body>
+        <container>
+        <div class="banner">
+            <img src="SZA-Banner.png" alt="SZA Banner Image" class="banner-image">
+        </div>
         <h1> SZA in a Genre All Her Own</h1>
         <h2>The SOS singer has reached meteoric levels of success, but shhh—don't tell her that.</h2>
         <div id="byline">By Sylvia Obell and Photographed By Renell Medrano. Styled By Patti Wilson.</div>
@@ -99,7 +103,7 @@
                         <li><a href="https://www.elle.com/culture/music/a44468870/sza-interview-2023/">SZA on Her New Album, SOS</a></li>
                     </ul>
             </div>
-
+        </container>
         </div>
 
     </body>
