--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -15,10 +15,12 @@
     </head>
 
     <body>
-        <container>
+     
         <div class="banner">
             <img src="SZA-Banner.png" alt="SZA Banner Image" class="banner-image">
+            <!--This image was created using Adobe XD-->
         </div>
+    <container>
         <h1> SZA in a Genre All Her Own</h1>
         <h2>The SOS singer has reached meteoric levels of success, but shhh—don't tell her that.</h2>
         <div id="byline">By Sylvia Obell and Photographed By Renell Medrano. Styled By Patti Wilson.</div>
