--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -22,7 +22,6 @@
              </a>
         </div>
              <!--This image was created using Adobe XD-->
-        </div>
     <div id="content">
         <h1> SZA in a Genre All Her Own</h1>
         <h2>The SOS singer has reached meteoric levels of success, but shhh—don't tell her that.</h2>
@@ -31,7 +30,7 @@
 
         <img src="sza2.jpg" alt="SZA posing on a bed, laying on her side with a serious expression wearing thigh-high boots, a white shirt, a black blazer and tie." class="main-image">
 
-        <div id="content">
+        <div id="article">
             <p>It was night one of two sold-out shows SZA would be performing to close out the first leg of her SOS Tour, and fans were lined up for miles in the streets surrounding Los Angeles' Kia Forum.</p>
 
             <p>Making my way into the venue that evening, I asked one of the hordes of teens standing in line what they were doing out there, since it was just past 8 P.M. and the doors had already opened. They told me they had been in line all day, some with chairs and blankets, in hopes of getting whatever cheaper tickets may be released at the box office or by resellers once the show began. I dont know if I was more surprised that these California residents had the fortitude to withstand the rain earlier in the day, or by the fact that acquiring affordable seats online has become so hard that Gen Z is now forced to take part in the age-old Gen X ritual of camping out for concert tickets.</p>
@@ -43,7 +42,7 @@
             <p>One might think banking these sorts of rare achievements would have her celebrating. But during our time together, I realize that no one is harder on SZA than Solána. That 10-week run at number one? "I want to know what kind of criminal activity happened where I'm not at 11 or 12 weeks. Someone did criminal activity," she half-jokes. "People are like, 'Aren't you happy?' And I'm just like, 'No, I have to put out a better body of work.'"</p>
             
             <div id="sza-quote">
-                "You don't get to block me on everything. Tell our mutual friends terrible things about me like I'm a monster, or whatever the case may be. And then I don't get to speak my peace in my way. You go do your healing and I'll do mine."</p>
+                "You don't get to block me on everything. Tell our mutual friends terrible things about me like I'm a monster, or whatever the case may be. And then I don't get to speak my peace in my way. You go do your healing and I'll do mine."
             </div>
 
             <p>She seems more caught up in the heaviness of the crown than its shiny jewels. There's also a sort of mistrust of fame inside her that's causing her to be apprehensive about putting too much security in the concept that, in all fairness, is known to be fleeting. "It's all really fickle....Had the first three shows of my tour gone poorly, would the rest of my dates have been sold out? Would those people be outside waiting in line by the time we got to L.A.? No. All it takes is, what, three poorly shot TikTok videos to basically decide that this tour is not worth coming to see," she tells me matter-of-factly. "I know that people don't love me because love is really unconditional, and I'm one scandal away from being canceled indefinitely like anyone else. I'm grateful that they like my art and that it speaks to them, and it connects and tethers all of us together in this weird way. It's dope, but it's also still a string that could be cut at any moment. Literally, sometimes there's no rhyme or reason to it. Remember Susan Boyle? Like, what if I'm Susan Boyle?!"</p>
@@ -104,14 +103,11 @@
             <div id="read-more">
                 <h5>Read More</h5>
                     <ul class="related-links">
-                        <li><a href="https://www.elle.com/fashion/a44109424/project-runway-season-20-cast-all-star-design ers/">Meet the All-Star Cast of Project Runway Season 20</a></li>
+                        <li><a href="https://www.elle.com/fashion/a44109424/project-runway-season-20-cast-all-star-designers/">Meet the All-Star Cast of Project Runway Season 20</a></li>
                         <li><a href="https://www.elle.com/fashion/a43853858/rock-style-trend-2023/">Get Ready for Rock Girl Summer</a></li>
                         <li><a href="https://www.elle.com/culture/music/a44468870/sza-interview-2023/">SZA on Her New Album, SOS</a></li>
                     </ul>
             </div>
-
         </div>
-
     </body>
-
 </html>
