--- a/Final/index.html
+++ b/Final/index.html
@@ -12,7 +12,8 @@
 
 
     <div class="hero-container">
-      <img src=""> <class="hero-image"></class>
+        <p class="hero-head">One year after Key Bridge tragedy, Maryland officials face scrutiny</p>
+        <img src="Photos/miguel-luna-mem.webp"> <class="hero-image"></class>
     </div>
 
 
@@ -56,6 +57,9 @@
 
         <p>In December 2023, a different committee member warned again that the body should consider how crews would communicate in an emergency involving "the loss of steering or propulsion of a ship approaching the Bay Bridge or Key Bridge." His concerns, he said, were "due to the unreliability of reaching someone in the current protocol."</p>
 
+        
+        <iframe title="Expenses of Francis Scott Key Bridge since 2000" aria-label="Grouped Bars" id="datawrapper-chart-wxaBk" src="https://datawrapper.dwcdn.net/wxaBk/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="815" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}})}();</script>
+
         <p>Three months later, the Dali was on its way to proving those worries were well-founded.</p>
 
         <p>At around 1:25 a.m. that March night, the vessel lost power when it was about three ship lengths from the bridge, according to NTSB's preliminary report on the collapse. The power returned briefly, then blacked out again.</p>
@@ -81,6 +85,8 @@
         <p>"I started to call out to each one of them by name," said Cervantes Suarez, then 37, who suffered a cracked chest plate. "But no one answered me."</p>
 
         <p>In the weeks that followed, dive crews searched in cold, murky waters to recover the bodies of the other six men. The Port of Baltimore was shuttered for months. The FBI opened a criminal investigation. National transportation safety investigators announced that the vessel had also experienced two electrical blackouts the day before it toppled the Key Bridge.</p>
+        
+        <img src="Photos/Governor-Moore-bridge-collapse-one-year-anniv.jpg" alt="Governor Wes Moore speaking at the bridge collapse one year rememberance ceremony." class="img-fluid">
 
         <p>The tragedy launched Moore into the national spotlight, where in near daily public appearances he said his state was "Maryland Tough" and "Baltimore Strong." Again and again, he praised the police officers for saving lives by stopping traffic and emphasized his promise to take care of the survivors and their families. He said safety was "paramount."</p>
 
